# todoist-mcp

./: .env.example  .gitignore  README.md  claude-config-simple.json  claude_desktop_config.json  pyproject.toml  run-todoist-mcp.sh  run-todoist-mcp.sh.EXAMPLE
todoist_mcp/: __init__.py  __main__.py  cli.py  client.py  server.py
todoist_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
